css/dwyl.css
*, *:before, *:after {
  box-sizing: border-box;
}
html {
  color: #403f3f;
}
a {
  color: #4DB6AC;
  text-decoration: none;
}
img {
  max-width: 100%;
}
ol {
  padding-left: 0;
  list-style-type: none;
}
ol li {
  margin-bottom: 1em;
  line-height: 1.6em;
}
.pure-g [class *="pure-u"] {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding-left: 1.5em;
  padding-right: 1.5em;
}
.pure-sm-hide {
  display: none;
}
.pure-xl-show {
  display: none;
}
.dark-bg {
  background-color: #403f3f;
  color: #f5f5f5;
}
.flex-center-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
}
/*.flex-center {
  margin-bottom: 94px;
}*/

/*==============================
  CONTENT BLOCKS
================================*/

.full-height-block {
  position: relative;
  padding:0 1em;
  min-height: 720px;
  /*fallback for ie8*/
  min-height: 100vh;
  padding-top: 94px;
}
  .section-heading {
    text-align: center;
    position: absolute;
    left: 0;
    right: 0;
  }
  .section-boxes {
      padding-top: 6em;
      padding-bottom: 9em;
  }
    .section-box {
        border: 3px solid #403f3f;
        border-radius: 5px;
        padding: 1em;
        min-height: 13em;
        margin: 1.5em 0;
        text-align: center;
    }
      .section-box p {
          margin-bottom: 0;
      }
  .dark-bg .section-box {
      border-color: white;
  }

  .full-height-block.has-tagline .section-boxes {
    padding-top: 10em;
  }

/*==============================
  NAV
================================*/

.home-menu {
  background: #ffffff;
  height: 94px;
  border-bottom: 1px solid #F5f5f5
  /* Needs to be the same has padding-top on .full-height-block */
}
  .home-menu .pure-menu-heading {
    color: #616161;
    text-transform: none;
    font-size: 3em;
    padding: 0.1em;
  }
    .pure-menu-heading img {
      max-width: 1.5em;
    }
.pure-menu-active>.pure-menu-link, .pure-menu-link:hover, .pure-menu-link:focus {
  background-color: transparent;
  /* Overriding purecss grey box effect */
}
.pure-menu-horizontal .pure-menu-list {
  float: right;
  line-height: 94px;
  /* Needs to be the same has padding-top on .full-height-block */
}

/*Need this repeated here to override pureCSS styles due to specificity*/
.home-menu .pure-menu-item a {
  color: #616161;
  padding-top: 0;
  padding-bottom: 0;
}
.home-menu .pure-menu-item a:hover {
  color: #4DB6AC;
  transition: color 0.2s ease;
}
.home-menu .pure-menu-item a.pure-menu-selected {
  color: #616161;
  transition: color 0.2s ease;
}
.pure-menu-horizontal nav {
  position: fixed;
  background-color: white;
  width: 100%;
  top: 94px;
  left: 0;
  transition: left 0.3s ease;
  z-index: 100;
}
  .pure-menu-horizontal nav ul.pure-menu-list {
    list-style-type: none;
    padding: 0;
    width: 100%;
  }
    .pure-menu-horizontal nav ul li.pure-menu-item  {
      width: 100%;
      border-bottom: solid 1px #aaa;
      display: block;
      font-size: 1.3em;
      line-height: 2.6em;
      padding-left: 25px;
    }
  .burger-button {
    cursor: pointer;
    position: absolute;
    right: 25px;
    width: 30px;
    top: 0;
    height: 94px;
    background: url('/img/common/icons/burger.png');
    background-size:contain;
    background-position: center center;
    background-repeat: no-repeat;
  }
  nav.concealed {
    left: -100vw;
  }

/*==============================
  SPLASH
================================*/
.splash {
  background: url(../img/common/team-splash-image.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-position: center center;
}
  .splash-container {
    /*Inspired by https://css-tricks.com/perfect-full-page-background-image/ */
    background: url(../img/common/dwyl_heart.png) no-repeat center center;
    background-size: contain;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    /* Height of page header */
    top: 94px;
    bottom: 10em;
    left: 0;
    right: 0;
    position: absolute;
    transition: background-image 1s;
  }
  .splash-container:hover{
    background-image: url(../img/common/dwyl_heart_teal_tick.png);
    transition: background-image 1s;
  }
    .splash-head {
      border: none;
    }
    .splash-subhead {
      opacity: 1;
    }
    .splash-tagline {
      position: absolute;
      bottom: 6em;
      left: 0;
      right: 0;
      text-align: center;
      font-size: 1.8em;
    }
    .splash-tagline .tagline-highlight {
      transition: color 0.4s ease;
    }
    .splash-tagline:hover .tagline-highlight {
      color: #4DB6AC;
      transition: color 0.6s ease;
    }
/*==============================
  OFFERING BLOCK
================================*/

.offering-tagline {
  text-align: center;
}
.offering-icon {
  width: 100%;
  height: 10em;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
}
.mvp-icon {
  background-image:url(/img/common/icons/offering/mvp-icon-new.png);
}
.user-testing-icon {
  background-image:url(/img/common/icons/offering/user-testing-icon.png);
}
.training-icon {
  background-image:url(/img/common/icons/offering/training-icon.png);
}

/*==============================
  PROCESS BLOCK
================================*/

.process h3 {
  text-align: center;
}
.process .diagram {
  display: block;
  margin: 0 auto;
  max-width: 650px;
  width: 100%;
}
.process ol h3 {
  text-align: left;
  padding-bottom: 0.6em;
  border-bottom: #4DB6AC 3px solid;
}

/*==============================
  CLIENTS
================================*/

.clients .section-heading {
    margin-bottom: 12em;
    text-align: center;
}
.client-container {
  text-align: center;
  color: #403f3f;
  position: relative;
  max-width: 20em;
  margin: 0 auto;
}
  .client-quote {
    padding:2em;
    font-style: italic;
    position: absolute;
    bottom: 100%;
    height: 12em;
  }
  .client-name {
      padding-top: 2em;
      position: absolute;
      width: 100%;
  }
  .client-image {
    width: 50%;
    margin: 0 auto;
  }
    .client-image img {
      border-radius: 50%;
      width: 100%
    }
.clients-tagline {
  text-align: center;
}

/*==============================
  CONTACT US
================================*/

.pure-form .pure-group select, .pure-form .pure-group input, .pure-form .pure-group textarea {
  color:#616161;
  border-radius:4px;
}
.pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child {
  /* Overriding strange styles from purecss */
  top:0px;
  border-radius: 4px;
  margin:0;
}
#contact {
}
  #contact button {
    float: right;
  }
  #contact input, #contact select, #contact textarea {
    width: 100%;
  }
  h2.call-to-action {
      font-size: 8em;
      text-align: right;
      line-height: 1em;
      margin-top: 0em;
      margin-bottom: 0;
  }
  span.contact-detail {
    text-align: right;
    width: 100%;
    display: block;
    font-size: 1.7em;
    font-weight: bold;
  }
  span.contact-tagline {
    text-align: right;
    width: 100%;
    display: block;
    font-weight: bold;
  }
.disclaimer {
  letter-spacing: 0.05em;
  font-size: 0.8em;
  text-transform: uppercase;
}
.thanks {
  display: none;
  color: #2A628F;
}
.social-icon {
  padding: 0.5em;
}
.social i {
  font-size: 1.5em;
}
/*temporarily inserted for banking purposes*/
.copyright-block {
  width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
}

/*Hides labels from sighted-users without hiding from screen readers*/
.sr-only {
  color: red;
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  border: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
}

/*==============================
  VALUES
================================*/

.values h1 {
  text-align: center;
}

/*==============================
  TEAM
================================*/

.member-image img {
  max-width: 100%;
  border-radius: 50%;
  overflow: hidden;
}
.no-flex-margin {
  /* This is for pages which don't use flex centering. It is to offset the fixed nav. */
  margin-top: 94px;
}
.member-container {
  border-radius: 1.5em;
  padding: 1em 1em 1em 0;
  min-height: 13em;
  margin: 1.5em 0;
  cursor: pointer;
}
.member-container:hover {
    transition: opacity 0.2s ease;
    opacity: 0.8;
}
.member-container:after {
    content: "";
    display: block;
    clear: both;
}
  .member-image {
      width: 50%;
      padding: 0 3em;
      float: left;
  }
    .member-image img {
      width: 100%;
      max-width: 14em;
      border-radius: 50%;
      overflow: hidden;
    }
  .member-title {
    width: 50%;
    float:left;
  }
  .member-title h2 {
    margin-top: 0;
    font-size: 1em;
  }

/*
 * -- TABLET (AND UP) MEDIA QUERIES --
 * On tablets and other medium-sized devices, we want to customize some
 * of the mobile styles.
 */

@media (min-width: 48em) {
  .pure-sm-hide {
    display: inline-block;
  }
  .pure-md-hide {
    display: none;
  }
  h2.call-to-action {
      margin-top: -2em;
  }
  .values h1 {
    margin-bottom: 2.5em;
  }
  .pure-u-1.pure-u-md-1-2.flex-center.contact-box form{
    max-width: 40em;
  }
  /*This is for the nav bar*/
  .pure-menu-horizontal nav {
    position: relative;
    float: right;
    left: 0;
    top: 0;
    width: auto;
    transition: none;
  }
    .pure-menu-horizontal nav ul li.pure-menu-item {
        width: auto;
        border-bottom: none;
        display: inline-block;
        font-size: 1em;
        line-height: 2.6em;
        padding-left: 25px;
      }
  .burger-button {
    display: none;
  }
  /*end of nav bar css */
}

@media (min-width: 80em) {
  /* This class is for containers which are full width on sm and md and lg screens, and
  half width on xl screens.*/
  .pure-md-hide {
    display: inline-block;;
  }
  .pure-xl-show {
    display: inline-block;
  }
  .container-xl-1-2 {
    width: 50%;
    margin: 0 auto;
  }
  .container-xl-1-2 .section-box {
    /* Would like to make this better */
    min-height: 15em;
  }
}

/*==============================
  COLOUR REFERENCE
================================
+ teal: #4DB6AC;
+ dark teal: #00897B;
+ dark blue: #2A628F;
+ dark grey: #403f3f;
+ logo grey: #616161;
+ light grey: #F5f5f5;
+ off-white: #FAFAFA;
*/

